feat/api-rework: updated documentation for API
